--- a/style/styles.css
+++ b/style/styles.css
@@ -1,98 +1,81 @@
-.mytext{
-    border:0;padding:10px;background:whitesmoke;
+body {
+    font-family: Garamond;
 }
-.text{
-    width:75%;display:flex;flex-direction:column;
+
+h1 {
+    color: rgb(199, 0, 0);
+    margin-bottom: 0;
+    margin-top: 0;
+    text-align: center;
+    font-size: 40px;
 }
-.text > p:first-of-type{
-    width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
+
+h3 {
+    color: black;
+    font-size: 20px;
+    margin-top: 3px;
+    text-align: center;
 }
-.text > p:last-of-type{
-    width:100%;text-align:right;color:silver;margin-bottom:-7px;margin-top:auto;
+
+#chatbox {
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    margin-top: 60px;
 }
-.text-l{
-    float:left;padding-right:10px;
-}        
-.text-r{
-    float:right;padding-left:10px;
+
+#userInput {
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    margin-top: 60px;
 }
-.avatar{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    width:25%;
-    float:left;
-    padding-right:10px;
+
+#textInput {
+    width: 87%;
+    border: none;
+    border-bottom: 3px solid #009688;
+    font-family: monospace;
+    font-size: 17px;
 }
-.macro{
-    margin-top:5px;width:85%;border-radius:5px;padding:5px;display:flex;
+
+#buttonInput {
+    padding: 3px;
+    font-family: monospace;
+    font-size: 17px;
 }
-.msj-rta{
-    float:right;background:whitesmoke;
+
+.userText {
+    color: white;
+    font-family: monospace;
+    font-size: 17px;
+    text-align: right;
+    line-height: 30px;
 }
-.msj{
-    float:left;background:white;
+
+.userText span {
+    background-color: #009688;
+    padding: 10px;
+    border-radius: 2px;
 }
-.frame{
-    background:#e0e0de;
-    height:450px;
-    overflow:hidden;
-    padding:0;
+
+.botText {
+    color: white;
+    font-family: monospace;
+    font-size: 17px;
+    text-align: left;
+    line-height: 30px;
 }
-.frame > div:last-of-type{
-    position:absolute;bottom:0;width:100%;display:flex;
+
+.botText span {
+    background-color: #EF5350;
+    padding: 10px;
+    border-radius: 2px;
 }
-body > div > div > div:nth-child(2) > span{
-    background: whitesmoke;padding: 10px;font-size: 21px;border-radius: 50%;
-}
-body > div > div > div.msj-rta.macro{
-    margin:auto;margin-left:1%;
-}
-ul {
-    width:100%;
-    list-style-type: none;
-    padding:18px;
+
+#tidbit {
     position:absolute;
-    bottom:47px;
-    display:flex;
-    flex-direction: column;
-    top:0;
-    overflow-y:scroll;
+    bottom:0;
+    right:0;
+    width: 300px;
 }
-.msj:before{
-    width: 0;
-    height: 0;
-    content:"";
-    top:-5px;
-    left:-14px;
-    position:relative;
-    border-style: solid;
-    border-width: 0 13px 13px 0;
-    border-color: transparent #ffffff transparent transparent;            
-}
-.msj-rta:after{
-    width: 0;
-    height: 0;
-    content:"";
-    top:-5px;
-    left:14px;
-    position:relative;
-    border-style: solid;
-    border-width: 13px 13px 0 0;
-    border-color: whitesmoke transparent transparent transparent;           
-}  
-input:focus{
-    outline: none;
-}        
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color: #d4d4d4;
-}
-::-moz-placeholder { /* Firefox 19+ */
-    color: #d4d4d4;
-}
-:-ms-input-placeholder { /* IE 10+ */
-    color: #d4d4d4;
-}
-:-moz-placeholder { /* Firefox 18- */
-    color: #d4d4d4;
-}  
