--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 }
 
 h1 {
-    color: rgb(199, 0, 0);
+    color: rgb(46, 124, 226);
     margin-bottom: 0;
-    margin-top: 0;
+    margin-top: 2rem;
     text-align: center;
     font-size: 40px;
 }
@@ -66,7 +66,7 @@ h3 {
 }
 
 .botText {
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: monospace;
     font-size: 17px;
     text-align: left;
@@ -74,7 +74,7 @@ h3 {
 }
 
 .botText span {
-    background-color: #EF5350;
+    background-color: #1897ff;
     padding: 10px;
     border-radius: 2px;
 }
@@ -88,8 +88,9 @@ h3 {
     </style>
   </head>
   <body>
-    <h1>Flask Chatterbot Example</h1>
-    <h3>A web implementation of <a href="https://github.com/gunthercox/ChatterBot">ChatterBot</a> using Flask.</h3>
+    <h1>DRW Assistant :)</h1>
+    <h3>Penerapan String Matching dan Regular Expression dalam
+      Pembangunan Deadline Reminder Assistant</h3>
     <div>
       <div id="chatbox">
         <p class="botText"><span>Hi! I'm Chatterbot.</span></p>
