--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@ h3 {
       Pembangunan Deadline Reminder Assistant</h3>
     <div>
       <div id="chatbox">
-        <p class="botText"><span>Hi! I'm Chatterbot.</span></p>
+        <p class="botText"><span>Hi!, I'm DRW Assistant :)</span></p>
       </div>
       <div id="userInput">
         <input id="textInput" type="text" name="msg" placeholder="Message">
