--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,16 @@ h3 {
     right:0;
     width: 300px;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(9, 126, 221);
+  color: white;
+  text-align: center;
+}
     </style>
   </head>
   <body>
@@ -125,4 +135,9 @@ h3 {
       </script>
     </div>
   </body>
+  <div class="footer">
+    <p>
+      By Dzaki, Rafidika, Wishnu
+    </p>
+  </div>
 </html>
