--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="style/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <title>
+      Harobot | Assistant yang Membantu Hidupmu dengan Fitur Reminder Pekerjaan!
+    </title>
     <style>
       body {
     font-family: Garamond;
@@ -98,12 +101,12 @@ h3 {
     </style>
   </head>
   <body>
-    <h1>DRW Assistant :)</h1>
+    <h1>Harobot</h1>
     <h3>Penerapan String Matching dan Regular Expression dalam
       Pembangunan Deadline Reminder Assistant</h3>
     <div>
       <div id="chatbox">
-        <p class="botText"><span>Hi!, I'm DRW Assistant :)</span></p>
+        <p class="botText"><span>Hi!, I'm Harobot ^_^</span></p>
       </div>
       <div id="userInput">
         <input id="textInput" type="text" name="msg" placeholder="Message">
