--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@ h3 {
       Pembangunan Deadline Reminder Assistant</h3>
     <div>
       <div id="chatbox">
-        <p class="botText"><span>Hi!, I'm Harobot ^_^</span></p>
+        <p class="botText"><span>Hi!, aku Harobot ^_^</span></p>
       </div>
       <div id="userInput">
         <input id="textInput" type="text" name="msg" placeholder="Message">
