--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@ h3 {
     margin-right: auto;
     width: 40%;
     margin-top: 60px;
+    margin-bottom: 8rem;
 }
 
 #textInput {
@@ -137,10 +138,12 @@ h3 {
         })
       </script>
     </div>
+    
   </body>
   <div class="footer">
     <p>
       By Dzaki, Rafidika, Wishnu
     </p>
   </div>
+  
 </html>
