--- a/templates/index.html
+++ b/templates/index.html
@@ -1,148 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>
       Harobot | Assistant yang Membantu Hidupmu dengan Fitur Reminder Pekerjaan!
     </title>
-    <style>
-      body {
-    font-family: Garamond;
-}
-
-h1 {
-    color: rgb(46, 124, 226);
-    margin-bottom: 0;
-    margin-top: 2rem;
-    text-align: center;
-    font-size: 40px;
-}
-
-h3 {
-    color: black;
-    font-size: 20px;
-    margin-top: 3px;
-    text-align: center;
-}
-
-#chatbox {
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-    margin-top: 60px;
-}
-
-#userInput {
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-    margin-top: 60px;
-    margin-bottom: 8rem;
-}
-
-#textInput {
-    width: 87%;
-    border: none;
-    border-bottom: 3px solid #009688;
-    font-family: monospace;
-    font-size: 17px;
-}
-
-#buttonInput {
-    padding: 3px;
-    font-family: monospace;
-    font-size: 17px;
-}
-
-.userText {
-    color: white;
-    font-family: monospace;
-    font-size: 17px;
-    text-align: right;
-    line-height: 30px;
-}
-
-.userText span {
-    background-color: #009688;
-    padding: 10px;
-    border-radius: 2px;
-}
-
-.botText {
-    color: rgb(255, 255, 255);
-    font-family: monospace;
-    font-size: 17px;
-    text-align: left;
-    line-height: 30px;
-}
-
-.botText span {
-    background-color: #1897ff;
-    padding: 10px;
-    border-radius: 2px;
-}
-
-#tidbit {
-    position:absolute;
-    bottom:0;
-    right:0;
-    width: 300px;
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: rgb(9, 126, 221);
-  color: white;
-  text-align: center;
-}
-    </style>
+   
   </head>
   <body>
+    <div class="logo">
+      <img class="style-logo" src="../static/harobot (1).gif">
+    </div>
+    
+
     <h1>Harobot</h1>
     <h3>Penerapan String Matching dan Regular Expression dalam
       Pembangunan Deadline Reminder Assistant</h3>
-    <div>
-      <div id="chatbox">
-        <p class="botText"><span>Hi!, aku Harobot ^_^</span></p>
-      </div>
-      <div id="userInput">
-        <input id="textInput" type="text" name="msg" placeholder="Message">
-        <input id="buttonInput" type="submit" value="Send">
-      </div>
-      <script>
-        function getBotResponse() {
-          var rawText = $("#textInput").val();
-          var userHtml = '<p class="userText"><span>' + rawText + '</span></p>';
-          $("#textInput").val("");
-          $("#chatbox").append(userHtml);
-          document.getElementById('userInput').scrollIntoView({block: 'start', behavior: 'smooth'});
-          $.get("/get", { msg: rawText }).done(function(data) {
-            var botHtml = '<p class="botText"><span>' + data + '</span></p>';
-            $("#chatbox").append(botHtml);
-            document.getElementById('userInput').scrollIntoView({block: 'start', behavior: 'smooth'});
-          });
-        }
-        $("#textInput").keypress(function(e) {
-            if ((e.which == 13) && document.getElementById("textInput").value != "" ){
-                getBotResponse();
-            }
-        });
-        $("#buttonInput").click(function() {
-            if (document.getElementById("textInput").value != "") {
-                getBotResponse();
-            }
-        })
-      </script>
+    <div class="container-logo">
+      <a href="start" class="button">Mulai!</a>
+      
     </div>
     
   </body>
   <div class="footer">
     <p>
-      By Dzaki, Rafidika, Wishnu
+      @ Dzaki, Rafidika, Wishnu, 2021
     </p>
   </div>
   
