--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,11 @@
     <title>
       Harobot | Assistant yang Membantu Hidupmu dengan Fitur Reminder Pekerjaan!
     </title>
-   
+   <style>
+     .logo {
+    margin-top: 5rem !important;
+     }
+   </style>
   </head>
   <body>
     <div class="logo">
